Trick seems to have been on changing the position from sticky to fixed in the progress bar style Currently, I am leaving the bar in default.html, where I make a direct call to the script progressbar.js The style is in assets/css/main.scss but this can probably be changed
It's time to start trimming the repo
Too much clutter and noise

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,3 +40,13 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+
+#progress-bar {
+  background: linear-gradient(to right, cyan, blue, var(--progress), transparent 0);
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 6px;
+  z-index: 1;
+}
